--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="inner-content">
             <h1>Norra Ängby Bygg AB</h1>
             <div>Telefon: <a href="Tel: 0739448819">073 944 88 19</a></div>
-            <div>E-post: <a href="mailto:norraangbybygg@gmail.com" >norraangbybygg@gmail.com</a></div>
+            <div>E-post: <a href="mailto:info@norraangbybygg.se" >info@norraangbybygg.se</a></div>
         </div>
     </div>
 
