--- a/index.html
+++ b/index.html
@@ -8,14 +8,28 @@
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-
-	<div class="content">
-        <div class="inner-content">
-            <h1>Norra Ängby Bygg AB</h1>
-            <div>Telefon: <a href="Tel: 0739448819">073 944 88 19</a></div>
-            <div>E-post: <a href="mailto:norraangbybygg@gmail.com" >norraangbybygg@gmail.com</a></div>
+    <div class="outer">
+        <div class="logo">
+            <img src="img/logo.svg" width="100%"/></div>
+        <div class="content">
+            <div class="inner-content">
+                <section>
+                    <div class="row">
+                      <div class="col"><span class="label">Telefon:</span></div>
+                      <div class="col spacer"></div>
+                      <div class="col"><a href="Tel: 0739448819">073 944 88 19</a></div>
+                    </div>
+                    <div class="row">
+                      <div class="col"><span class="label">E-post:</span></div>
+                      <div class="col spacer"></div>
+                      <div class="col"><a href="mailto:info@norraangbybygg.se" >info@norraangbybygg.se</a></div>
+                    </div>
+                  </section>
+                  <div class="instagram"><a href="https://www.instagram.com/norraangbybygg/" target="_blank"><div class="clickable"></div><span class="label">norraangbybygg</span></a></div>
+            </div>
         </div>
     </div>
+
 
 </body>
 </html>
